fix: Moved to using `gap` css instead of hacking

--- a/src/Col/Col.module.styl
+++ b/src/Col/Col.module.styl
@@ -4,7 +4,6 @@
 	max-width 100%
 	flex-basis 0
 	flex-grow 1
-	padding $gapSize 0 0 $gapSize
 
 	&.nogrow
 		max-width initial
